fixes #767 upgrade some examples to junit 5